# DronePilotAI-

./: .gitignore  README.md  pyproject.toml
modules/: camera.py  control.py  detector_mobilenet.py  drone.py  lidar.py  vision.py  zed.py
