[tool.poetry]
name = "dronepilitai"
version = "0.1.0"
description = ""
authors = ["Alexander <alialibakhshi9898@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
simple-pid = "^2.0.1"
pymavlink = "^2.4.49"
dronekit = "^2.9.2"
serial = "^0.0.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
